--- a/bloatstream/package.json
+++ b/bloatstream/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "daisyui": "^3.5.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -24,9 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
+    "typescript": "5.1.6",
     "prisma": "^5.1.1"
-  }
+  },
+  "devDependencies": {}
 }
