Update int-deployment.yml to read dockerfile correctly

--- a/.github/workflows/int-deployment.yml
+++ b/.github/workflows/int-deployment.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: "{{defaultContext}}:bloatstream"
-          file: ./Dockerfile.int
+          file: ./Dockerfile
           push: true
           tags: registry.raspi.timkausemann.de/bloatstream-int:latest
           cache-from: type=local,src=/tmp/.buildx-cache
