--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,6 @@ services:
       - GOOGLE_CLIENT_SECRET=
       - DB_URL=
       - APP_URL=
+      - NEXTAUTH_URL=
 volumes:
   bloatstream-mariadb-{branch}:
