Sign Out button

--- a/bloatstream/Dockerfile
+++ b/bloatstream/Dockerfile
@@ -1,10 +1,10 @@
-FROM --platform=linux/arm64 node:18-alpine AS dependencies
+FROM --platform=linux/arm/v8 node:18-alpine AS dependencies
 
 WORKDIR /app
 COPY package*.json .
 RUN npm ci
 
-FROM --platform=linux/arm64 node:18-alpine AS builder
+FROM --platform=linux/arm/v8 node:18-alpine AS builder
 
 WORKDIR /app
 COPY --from=dependencies /app/node_modules ./node_modules
@@ -13,7 +13,7 @@ COPY . .
 RUN npx prisma generate
 RUN npm run build
 
-FROM --platform=linux/arm64 node:18-alpine AS deploy
+FROM --platform=linux/arm/v8 node:18-alpine AS deploy
 
 WORKDIR /app
 
