--- a/.github/workflows/int-deployment.yml
+++ b/.github/workflows/int-deployment.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Login to Docker Registry
         uses: docker/login-action@v2
         with:
